Alignment and bg image fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,8 +519,7 @@ a.skew {
 
 .text {
   width: 540px;
-  margin: 10px;
-  padding: 10px;
+  
 }
 .founder {
   font-weight: 600;
